# local_rag

./: .gitignore  main.py  pyproject.toml
stories/: 1.txt
